--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,13 +19,18 @@
 }
 
 @font-face{
-    font-family: "SemiBold";
+    font-family: "Urbanist-SemiBold";
     src: url("../fonts/Urbanist-SemiBold.ttf");
 }
 
 html{
     font-size: 10px;
 }
+/* 
+body{
+    height: 100vh;
+    width: 0 auto;
+} */
 
 /* root{
     für variablen, farben etc. 
@@ -54,3 +59,146 @@ Grautöne
 #4C4C4D;
 #98989A;
 */
+
+header{
+    background-color: #1A3129;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+/* banner styling */
+.banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #CBEA7B;
+    border-radius: 0.6rem; 
+    margin: 2rem 2rem;
+}
+
+.banner-left{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.banner-mid{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-right{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.banner p{
+    color: #FFF;
+    font-family: "Urbanist-Regular";
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.7rem;
+}
+
+/* navigationbar styling */
+.navigation{
+    display: flex;  
+    padding: 20px;
+    gap: 0 2em;
+}
+
+.logo-left{
+    padding: 0 10px;
+    width: 30em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+    letter-spacing: 0.1rem;
+}
+
+h2{
+    color: #FFF;
+    font-family: "Urbanist-ExtraBold";
+    font-size: 1.8rem;
+}
+
+.logo-right{
+    width: 90em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 0.9em;
+    padding-right: 5em;
+}
+
+.logo-right a{
+    color: #FFF;
+    font-family: "Urbanist-Regular";
+    font-size: 1.8rem;
+    font-weight: 600;
+    gap: 1.5em;
+    text-decoration: none;
+}
+
+.contact-btn{
+    background-color: #CBEA7B; 
+    text-decoration: none;
+    font-family: "Urbanist-Regular";
+    color: #1A3129;
+    padding: 1.5em 3.3em;
+    text-align: center;
+    border: 1px solid #1A3129;
+    border-radius: 0.6rem;
+    display: flex;
+}
+
+/* welcome section */
+.welcome{
+    background-color: #FAFDF2;
+    display: flex;
+    /* width: 100vw; */
+    justify-content: center;
+    gap: 2.5rem;
+}
+
+.welcome-left{
+    background-color: #E5F5BD; 
+}
+
+.welcome-left img{
+    width: 100%;
+    height: 100%;
+
+}
+
+.welcome-right{
+    display: flex;
+    width: 100%;
+    padding-top: 14.5rem;
+}
+
+h1{
+    font-family: "Urbanist-Medium";
+    font-size: 5.8rem;
+    font-weight: 700;
+    color: #1A3129;
+}
+
+.welcome h3{
+    font-family: "Urbanist-Regular";
+    font-size: 3.4rem;
+    font-weight: 600;
+    color: #1A3129;
+}
+
+.welcome-right p{
+    font-family: "Urbanist-Regular";
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #4C4C4D;
+}
+
