--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,7 @@ h1{
 
 .customer-reference span{
     color: #98989A;
+    margin-right: 0.5rem;
 }
 /* --------- section features intro -------- */
 .features-intro{
@@ -467,10 +468,6 @@ th, td{
     gap: 1rem;
 }
 /* -------------footer styling -------------- */
-.button-mail, .button-phone, .button-world{
-    /* display: flex; */
-}
-
 .btn-mail, .btn-phone, .btn-world{ 
     text-decoration: none;
     font-family: "Urbanist-Regular";
@@ -488,8 +485,8 @@ footer p{
     font-size: 1.2rem;
     font-weight: 100;
 }
-/* 
-.anchor-to-top img{
-    width: 15%;
-    height: 15%;
-} */
+
+/* .btn-arrow-up img{ */
+    /* width: 15%; */
+    /* height: 15%; */
+/* } */
